# ChangeLog for dev-ruby/sassy-maps
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*sassy-maps-0.3.2 (15 May 2014)

  15 May 2014; Hans de Graaff <graaff@gentoo.org> +sassy-maps-0.3.2.ebuild,
  +metadata.xml:
  Initial import. Dependency for dev-ruby/breakpoint.
