@@ -1,1 +1,2 @@
 DIST sassy-maps-0.3.2.gem 6144 SHA256 2bc3b71644879240b5cd9b211d551b710fba73485816bf1933b4f42584e50371 SHA512 b741e2a9132e8333e9d384a5b4ca1323714c051359993736b5f117bc2afdf332878a166a3804e9b98c78ca042cf69db5c2b70d4a3d1e6c7105f3517cae99ec65 WHIRLPOOL 7ef618c48f99fb73ad4b34f5527e007d2e970f3d13cdeafa248d23d47551ab32b736ed51499877d7ea7fa01ef38d8949e823b32b505e3038e7fe2ded11660bc6
+DIST sassy-maps-0.4.0.gem 8192 SHA256 938477c22bc6f4bb3e18e939761f1a3272686b1fde6dc09be9edf80a43164328 SHA512 44b1ddb6313d330590576372afe055a2f1b79b32c846c143676cb7a89f4fd7e4f9eb7a3839f1ad4908b64337a602d01f2cb28c3073e606e12d0eebdf6ba90ec4 WHIRLPOOL 053ecb8773ce2f8ba6e9f52ea9d4906b4ebb83d2042a0ab859a6bc0fe6b51e7da08c7cd3cb2b20fb677c95115318f5a9a53d0a5057b4d805874c6c4468e9b518
