@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sassy-maps-0.4.0 (06 Jun 2014)
+
+  06 Jun 2014; Hans de Graaff <graaff@gentoo.org> +sassy-maps-0.4.0.ebuild:
+  Version bump.
+
 *sassy-maps-0.3.2 (15 May 2014)
 
   15 May 2014; Hans de Graaff <graaff@gentoo.org> +sassy-maps-0.3.2.ebuild,
